Misc. updates from notes while working on projects

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9b2e692e",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "18553b07",
    "metadata": {},
@@ -21,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "74e41c5c",
    "metadata": {},
@@ -156,7 +153,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c5eeb3cd",
    "metadata": {},
@@ -255,7 +251,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d80d99f8",
    "metadata": {},
@@ -320,7 +315,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fc93a619",
    "metadata": {},
@@ -433,7 +427,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7dbb943c",
    "metadata": {},
@@ -445,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "20accf2c",
    "metadata": {},
    "outputs": [
@@ -454,6 +447,7 @@
      "output_type": "stream",
      "text": [
       "[1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
+      "[1, 2, 3, 4, 5, 6]\n",
       "[1, 2, 3, 4, 5, 6]\n",
       "6\n",
       "1\n",
@@ -477,6 +471,11 @@
     "\n",
     "# Concatenation\n",
     "print(list1 + list2)\n",
+    "\n",
+    "# Destructive Concatenation\n",
+    "list1_mutated = [*list1]  # copy\n",
+    "list1_mutated.extend(list2)  # append in-place\n",
+    "print(list1_mutated)\n",
     "\n",
     "# Stats\n",
     "print(sum(list1))\n",
@@ -508,7 +507,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b5b86c72",
    "metadata": {},
@@ -562,7 +560,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05d18547",
    "metadata": {},
@@ -616,7 +613,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "45fe16b9",
    "metadata": {},
@@ -768,7 +764,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dbd4718e",
    "metadata": {},
@@ -816,7 +811,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c171b54",
    "metadata": {},
@@ -867,7 +861,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d603429",
    "metadata": {},
@@ -975,7 +968,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b576eb70",
    "metadata": {},
@@ -1085,7 +1077,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05b2cc0b",
    "metadata": {},
@@ -1137,7 +1128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d11885f5",
    "metadata": {},
@@ -1176,7 +1166,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "02a95aab",
    "metadata": {},
@@ -1210,7 +1199,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "425726da",
    "metadata": {},
@@ -1311,7 +1299,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d35ccfc1",
    "metadata": {},
@@ -1344,7 +1331,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "72747fd6",
    "metadata": {},
@@ -1398,7 +1384,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c3ffe452",
    "metadata": {},
@@ -1445,7 +1430,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b2dc8aa6",
    "metadata": {},
@@ -1590,7 +1574,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "90feafef",
    "metadata": {},
@@ -1626,7 +1609,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f6445b2f",
    "metadata": {},
@@ -1636,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "id": "73b26ec4",
    "metadata": {},
    "outputs": [],
@@ -1651,6 +1633,23 @@
     "age = 25\n",
     "message = f\"My name is {name} and I am {age} years old.\"\n",
     "# NOTE: this has replaced the old s % () stuff\n",
+    "\n",
+    "# Old-Style String Formatting\n",
+    "my_template_single = 'Hello, %s'\n",
+    "my_str_single = my_template_single % 'bob'\n",
+    "my_template_multi = 'Hello, %s.  My name is %s'\n",
+    "my_str_multi = my_template_multi % ('bob', 'alice')\n",
+    "\n",
+    "# Newer-Style String Formatting\n",
+    "# looks like f-strings but no f (so doesn't interpolate)\n",
+    "my_new_template = 'Hello, {}.  My name is {}'\n",
+    "my_new_str = my_new_template.format('bob', 'alice')\n",
+    "my_new_template_names = 'Hello, {person1}.  My name is {person2}'\n",
+    "my_new_str_names = my_new_template_names.format(person1='bob', person2='alice')\n",
+    "\n",
+    "# Numeric formatting\n",
+    "pi = 3.14159\n",
+    "formatted = \"The value of pi is {:.2f}\".format(pi)\n",
     "\n",
     "# String length\n",
     "length = len(s1)\n",
@@ -1679,10 +1678,6 @@
     "stripped = s.strip()\n",
     "replaced = s.replace(\"hello\", \"hi\")\n",
     "\n",
-    "# String formatting\n",
-    "pi = 3.14159\n",
-    "formatted = \"The value of pi is {:.2f}\".format(pi)\n",
-    "\n",
     "# String searching\n",
     "s = \"Hello, World!\"\n",
     "contains = \"World\" in s\n",
@@ -1691,7 +1686,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "263a3c35",
    "metadata": {},
@@ -1772,7 +1766,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1ece0f22",
    "metadata": {},
@@ -1806,7 +1799,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e05ffba0",
    "metadata": {},
@@ -1841,7 +1833,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "964f3d45",
    "metadata": {},
@@ -1889,7 +1880,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3937959f",
    "metadata": {},
@@ -1948,7 +1938,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "33249f38",
    "metadata": {},
@@ -1997,7 +1986,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f5b13b77",
    "metadata": {},
