--- a/python/Modules and Packages.ipynb
+++ b/python/Modules and Packages.ipynb
@@ -622,6 +622,56 @@
    "cell_type": "markdown",
    "id": "b2542b93",
    "metadata": {},
+   "source": [
+    "# Unexpected Name Clash Issue\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed521d40",
+   "metadata": {},
+   "source": [
+    "- if you have a file called `mymodule.py` and that file has the line `import mymodule`, it is trying to import itself\n",
+    "- this seems obvious in this example, but it can happen to you unexpectedly, and no helpful info is given\n",
+    "  - the symptom would be that there is nothing in the module\n",
+    "  - eg. I made a file called openai.py in my library to call openai's API, which has that same name\n",
+    "- another place this comes up is if you have a folder named after you python script\n",
+    "  - eg. _mymodule folder_ in same folder as mymodule.py\n",
+    "  - then you try to `import mymodule.someothermodule`\n",
+    "    - because mymodule.py exists, this doesn't work\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc3e18c",
+   "metadata": {},
+   "source": [
+    "# Terminology: Wheels\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d52a345",
+   "metadata": {},
+   "source": [
+    "- a wheel is like a compiled binary version of a package\n",
+    "- even though the packages are python, they often have compiled C++ portions (as tensorflow does)\n",
+    "- those portions must be compiled for the target system\n",
+    "- when you pip install, you get the precompiled wheels\n",
+    "- sometimes (mostly on apple silicon), you either can't pip install something or it fails due to not being properly compiled for that architecture\n",
+    "- `pip install --no-binary :all:` is a trick to make the binary build on your system which might sometimes resolve it (and sometimes not)\n",
+    "- the apple people are very active on conda-forge, so conda install often has much better wheels for apple in particular\n",
+    "- the apple channel (as opposed to conda-forge) also has stuff from the apple team specifically for that purpose pip kind of sees (some of) what conda has installed, and conda sees (some of) what pip installs, but they're not equivalent\n",
+    "- for instance, they can't properly uninstall each other's stuff\n",
+    "- dependency resolution in both systems doesn't tend to know that you had an old version because it had a better wheel for M1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bd3d0ac",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
