--- a/python/Unit Tests.ipynb
+++ b/python/Unit Tests.ipynb
@@ -522,7 +522,11 @@
    "source": [
     "## Mocking print()\n",
     "\n",
-    "Note below that prints that happen within the `with` block do not get printed to the console but instead get appended to our array. Once the block is over, printing goes to the console again.\n"
+    "Note below that prints that happen within the `with` block do not get printed to the console but instead get appended to our array. Once the block is over, printing goes to the console again.\n",
+    "\n",
+    "WARNING: the reason you have to use builtins.print is because you can only mock something via its parent class or module. This applies to your own stuff as well.\n",
+    "\n",
+    "WARNING: if you are testing a library that calls a function from a library, it won't get the mocked version unless it calls it via the parent (instead of importing directly as a name). This doesn't apply to builtins though.\n"
    ]
   },
   {
@@ -815,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
