--- a/typescript/Setup.ipynb
+++ b/typescript/Setup.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5dfc38b7",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8cd66d6f",
    "metadata": {},
@@ -21,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "232185c4",
    "metadata": {},
@@ -29,6 +26,7 @@
     "1. (Optional) **NVM** to manage multiple side by side nodejs & npm versions: https://github.com/nvm-sh/nvm (like conda for python except only 1 of each version of node)\n",
     "1. **nodejs** - eg. by running `nvm install node` to make an environment with the latest node\n",
     "   - **npm** is included with node and will manage packages for us (within an nvm environment)\n",
+    "   - the first node you install will become the default silently on all shell activations\n",
     "1. `npm install -g typescript`\n",
     "   - a lot of people get angry if you install globally like this, but since the Angular docs recommend it for their package, it wouldn't make sense to not do it for TS\n",
     "   - if you don't do it globally, you'll have to switch to the folder with a local install and do `npx` in front all the time - it's not a nice experience IMO\n",
@@ -43,7 +41,107 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "df6fd4da",
+   "metadata": {},
+   "source": [
+    "# More About NVM\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfbd02b",
+   "metadata": {},
+   "source": [
+    "- `nvm install [version]`\n",
+    "  - to install a specific Node version\n",
+    "- `nvm use [version]`\n",
+    "  - to switch among installed versions\n",
+    "- `nvm which [version]`\n",
+    "  - to see where a version is physically installed\n",
+    "- `nvm deactivate`\n",
+    "  - to deactivate node version in current shell\n",
+    "- `~/.nvm` is where globally installed npm packages will go\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "924aa57f",
+   "metadata": {},
+   "source": [
+    "# More About Node\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a10d0033",
+   "metadata": {},
+   "source": [
+    "- `node`\n",
+    "  - to get a JS repl at the terminal\n",
+    "- `node script.js`\n",
+    "  - to execute a script from the terminal\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f60951da",
+   "metadata": {},
+   "source": [
+    "# More About NPM\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c37985e",
+   "metadata": {},
+   "source": [
+    "- `npm list`\n",
+    "  - list the locally installed packages (current project)\n",
+    "  - searches up for first ancestor folder with `node_modules` folder\n",
+    "- `npm list -g`\n",
+    "  - list the globally installed packages\n",
+    "- `npm install -g npm@9.6.7`\n",
+    "  - install a specific version of an npm package\n",
+    "  - in this case, upgrading (or downgrading) npm itself\n",
+    "- `npm root -g`\n",
+    "  - physical install location of global packages\n",
+    "- `npm uninstall -g @angular/cli`\n",
+    "  - uninstall a global package (ommit -g to make local)\n",
+    "- `npm cache clean --force`\n",
+    "  - if you need to clear the cache for some reason\n",
+    "- `package.json`\n",
+    "  - contains a list of node packages and versions requirements for the given project\n",
+    "  - this should be commited to your repo, whereas `node_modules` should not\n",
+    "  - when someone syncs your repo, they should do `npm install` in the folder of the project to bring down the packages\n",
+    "  - automatically updated by npm when you install a package without -g\n",
+    "  - can also do _custom scripts_ so that you can npm run them from the project folder\n",
+    "  - ^ means minor change ok (eg. ^1.1.0 means >1.1.0 and <2.0.0)\n",
+    "  - ~ means subminor change ok (eg. ~1.1.0 means >1.1.0 and <1.2.0)\n",
+    "- `package-lock.json`\n",
+    "  - goes along with `package.json` and also gets updated\n",
+    "  - related to specific versions of packages after installing (I think)\n",
+    "- locally installed packages _shadow global_ packages\n",
+    "- need to install globally to get _shell commands_ (eg. ng)\n",
+    "  - but you can use `npx [command]` to run a locally installed command like ng if you installed locally\n",
+    "- `npm install --save typescript`\n",
+    "  - --save is now the default option (in the past it wasn't)\n",
+    "  - just means to save to production dependencies portion of package.json\n",
+    "- `npm install --save-dev typescript`\n",
+    "  - --save-dev means put in DevDependencies part of package.json instead\n",
+    "  - then that package is included in the development environment but not in a prod package of the project\n",
+    "  - if you accidentally forget to --save-dev, you can manually move the package's line in package.json and package-lock.json (or uninstall and reinstall)\n",
+    "- `npm install`\n",
+    "  - after you sync a project that has a package.json, call this command in that folder to set up the node_modules folder with the packages so that you can run the project\n",
+    "- `npm run [scriptName]`\n",
+    "  - runs a script from package.json in local project\n",
+    "  - use -g to run from global packages\n",
+    "  - scripts can be added by packages you install, and you can also manually add them yourself\n",
+    "- `npm init`\n",
+    "  - initializes a folder with a package.json so that you can start npm installing things\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "945fbbc0",
    "metadata": {},
@@ -52,7 +150,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bc7067df",
    "metadata": {},
@@ -65,7 +162,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7852e5c2",
    "metadata": {},
@@ -74,7 +170,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "46f74cc0",
    "metadata": {},
@@ -85,7 +180,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2cc21701",
    "metadata": {},
@@ -94,7 +188,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "08b7f8d8",
    "metadata": {},
@@ -108,7 +201,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0b8efdfe",
    "metadata": {},
@@ -117,7 +209,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "95d51a12",
    "metadata": {},
@@ -135,7 +226,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a487f544",
    "metadata": {},
@@ -144,7 +234,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "22bf9a07",
    "metadata": {},
@@ -156,7 +245,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "87c242c8",
    "metadata": {},
@@ -165,7 +253,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0a894ca3",
    "metadata": {},
@@ -179,7 +266,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "447bfa36",
    "metadata": {},
@@ -188,7 +274,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cd7f0f8c",
    "metadata": {},
@@ -204,7 +289,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dd38ca26",
    "metadata": {},
@@ -213,7 +297,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8281befc",
    "metadata": {},
