--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f5f2a0a3",
    "metadata": {},
@@ -20,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "51f1ac9a",
    "metadata": {},
@@ -128,7 +126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5cbf7c32",
    "metadata": {},
@@ -292,7 +289,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f083056c",
    "metadata": {},
@@ -360,7 +356,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9aa85534",
    "metadata": {},
@@ -401,7 +396,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "00946533",
    "metadata": {},
@@ -412,7 +406,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d1c5db42",
    "metadata": {},
@@ -427,7 +420,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0141cf03",
    "metadata": {},
@@ -485,7 +477,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "84f8bef6",
    "metadata": {},
@@ -537,7 +528,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "172b790a",
    "metadata": {},
@@ -592,7 +582,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2fe2e55b",
    "metadata": {},
@@ -625,7 +614,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4350afaa",
    "metadata": {},
@@ -662,7 +650,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac333f4e",
    "metadata": {},
@@ -712,7 +699,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f5e4ee9b",
    "metadata": {},
@@ -721,7 +707,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "adae9afd",
    "metadata": {},
@@ -757,7 +742,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "81bf6e82",
    "metadata": {},
@@ -814,7 +798,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8cbecefd",
    "metadata": {},
@@ -861,7 +844,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e2072af",
    "metadata": {},
@@ -900,7 +882,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b0f15035",
    "metadata": {},
@@ -944,7 +925,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "60b05769",
    "metadata": {},
@@ -979,9 +959,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48357ab0",
+   "metadata": {},
+   "source": [
+    "# asyncio\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1fb46ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "\n",
+    "# Note the return type is still the synchronous one.\n",
+    "# But asyncio lets us put 'async' in front.\n",
+    "async def my_async_fn() -> int:\n",
+    "    return 10\n",
+    "\n",
+    "\n",
+    "# An async fn can call another.\n",
+    "async def my_calling_fn():\n",
+    "    # Use await and treat as a synchronous value.\n",
+    "    val = await my_async_fn()\n",
+    "    print(val)\n",
+    "    return val\n",
+    "\n",
+    "\n",
+    "# This is how you'd call a top-level async function\n",
+    "# to kick off the whole chain.\n",
+    "# But you can't do it in a Jupyter Notebook.\n",
+    "# You're only supposed to call asyncio.run() once\n",
+    "# per program.\n",
+    "#\n",
+    "# val = asyncio.run(my_calling_fn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f19ad0",
+   "metadata": {},
+   "source": [
+    "## Other Useful asyncio things\n",
+    "\n",
+    "- `async with` to get a context asynchronously and then continue\n",
+    "- `asyncio.Lock` for alternative to `threading.Lock` that is friendly to async operations\n",
+    "- `asyncio.gather()` to wait on multiple async things\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4239097b",
+   "id": "c1118fbd",
    "metadata": {},
    "outputs": [],
    "source": []
