Hallucination Patrol on Java Strings notebook.

--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -22,10 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "94794875",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a string using double quotes\n",
+      "Single quotes\n",
+      "This is a string with \"double quotes\" inside\n",
+      "This is a string with 'single quotes' inside\n",
+      "This is a verbatim string\n",
+      "It can span multiple lines\n",
+      "\n",
+      "John Doe\n",
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "public class StringQuotesDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -67,7 +83,9 @@
     "        String greeting = hello.concat(\" \").concat(world);\n",
     "        System.out.println(greeting); // Hello World\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "StringQuotesDemo.main(null);"
    ]
   },
   {
@@ -96,10 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "934a8951",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of letter is: A\n",
+      "The value of message is: Hello, World!\n",
+      "The value of escapedMessage is: This is a \"quoted\" message.\n",
+      "The value of concatenatedMessage is: Hello, World! My name starts with the letter A\n",
+      "The value of charToString is: A\n",
+      "The value of stringToChar is: W\n",
+      "Is A a letter? true\n",
+      "Is 5 a digit? true\n",
+      "Is $ a letter? false\n"
+     ]
+    }
+   ],
    "source": [
     "public class CharacterTypesAndQuoting {\n",
     "    public static void main(String[] args) {\n",
@@ -134,7 +168,9 @@
     "        System.out.println(\"Is \" + digit + \" a digit? \" + Character.isDigit(digit)); // Is 5 a digit? true\n",
     "        System.out.println(\"Is \" + specialCharacter + \" a letter? \" + Character.isLetter(specialCharacter)); // Is $ a letter? false\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "CharacterTypesAndQuoting.main(null);"
    ]
   },
   {
@@ -152,7 +188,7 @@
     "\n",
     "We also demonstrate the usage of template strings with `String.format()`. Template strings allow you to define a format string separately and then provide the values later. We create a template string and use `String.format()` to substitute the placeholders with the actual values.\n",
     "\n",
-    "Additionally, we show how to use positional arguments and named arguments with template strings. Positional arguments allow you to specify the order of the values explicitly using indices (`%1$s`, `%2$d`, etc.). Named arguments, on the other hand, allow you to assign names to the placeholders and provide values using those names (`%(name)s`, `%(age)d`, etc.).\n",
+    "Additionally, we show how to use positional arguments and named arguments with template strings. Positional arguments allow you to specify the order of the values explicitly using indices (`%1$s`, `%2$d`, etc.). Named arguments are not supported like they are in Python.\n",
     "\n",
     "Finally, we print the formatted strings to demonstrate the expected output.\n",
     "\n",
@@ -161,10 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "273f2b91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John, Age: 25, Salary: 5000.50\n",
+      "Name: John, Age: 25, Salary: 5000.50\n",
+      "Name: John, Age: 25, Salary: 5000.50\n",
+      "Name: John, Salary: 5000.50, Age: 25\n"
+     ]
+    }
+   ],
    "source": [
     "public class FormattedStringsDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -191,14 +238,10 @@
     "        String positionalTemplateString = String.format(positionalTemplate, name, age, salary);\n",
     "        System.out.println(positionalTemplateString);\n",
     "        // Expected output: Name: John, Salary: 5000.50, Age: 25\n",
-    "\n",
-    "        // Using template strings with String.format() and named arguments\n",
-    "        String namedTemplate = \"Name: %(name)s, Age: %(age)d, Salary: %(salary).2f\";\n",
-    "        String namedTemplateString = String.format(namedTemplate, \"name\", name, \"age\", age, \"salary\", salary);\n",
-    "        System.out.println(namedTemplateString);\n",
-    "        // Expected output: Name: John, Age: 25, Salary: 5000.50\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "FormattedStringsDemo.main(null);"
    ]
   },
   {
@@ -228,10 +271,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0d1facaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the string: 13\n",
+      "First character: H\n",
+      "Last character: !\n",
+      "Concatenated message: Hello, John\n",
+      "Contains 'World': true\n",
+      "Contains 'Universe': false\n",
+      "Uppercase string: HELLO, WORLD!\n",
+      "Lowercase string: hello, world!\n",
+      "Starts with 'Hello': true\n",
+      "Ends with 'World!': true\n",
+      "Index of 'World': 7\n",
+      "Replaced string: Hello, Universe!\n",
+      "Split array:\n",
+      "Hello\n",
+      "World!\n",
+      "Trimmed string: Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "public class StringMethodsDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -291,15 +357,20 @@
     "            System.out.println(s);\n",
     "        }\n",
     "        // Expected output:\n",
+    "        // Split array:\n",
     "        // Hello\n",
     "        // World!\n",
     "        \n",
     "        // Trimming leading/trailing whitespace\n",
     "        String stringWithWhitespace = \"   Hello, World!   \";\n",
     "        String trimmedString = stringWithWhitespace.trim();\n",
-    "        System.out.println(\"Trimmed string: \" + trimmedString); // Expected output: Hello, World!\n",
+    "        System.out.println(\"Trimmed string: \" + trimmedString); \n",
+    "        // Expected output: \n",
+    "        // Trimmed string: Hello, World!\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "StringMethodsDemo.main(null);"
    ]
   },
   {
@@ -326,10 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e762d405",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "The answer is: 42\n",
+      "John Doe\n",
+      "Hello\n",
+      "nullWorld\n",
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "public class StringConcatenationDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -370,7 +454,9 @@
     "        String finalString = stringBuilder.toString();\n",
     "        System.out.println(finalString); // Hello World\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "StringConcatenationDemo.main(null);"
    ]
   },
   {
@@ -409,10 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4a8294e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting int to String: 42\n",
+      "Converting double to String: 3.14159\n",
+      "Converting String to int: 25\n",
+      "Converting String to double: 9.99\n",
+      "Converting int to String using String.valueOf(): 2022\n",
+      "Converting String to int using Integer.valueOf(): 10\n"
+     ]
+    }
+   ],
    "source": [
     "public class StringConversionExample {\n",
     "    public static void main(String[] args) {\n",
@@ -446,7 +545,9 @@
     "        int quantity = Integer.valueOf(quantityAsString);\n",
     "        System.out.println(\"Converting String to int using Integer.valueOf(): \" + quantity); // Expected output: 10\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "StringConversionExample.main(null);"
    ]
   },
   {
@@ -474,10 +575,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "29bc0d56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original String: Héllo Wörld!\n",
+      "Default Charset: UTF-8\n",
+      "Bytes (Default Encoding): [B@5102e314\n",
+      "Decoded Text (Default Encoding): Héllo Wörld!\n",
+      "Bytes (UTF-16 Encoding): [B@3b2aa66f\n",
+      "Decoded Text (UTF-16 Encoding): Héllo Wörld!\n",
+      "Contains 'ö': true\n",
+      "Index of 'W': 6\n",
+      "Replaced Text: HéLLo WörLd!\n",
+      "Split Text: [Héllo, Wörld!]\n"
+     ]
+    }
+   ],
    "source": [
     "import java.nio.charset.Charset;\n",
     "import java.nio.charset.StandardCharsets;\n",
@@ -536,7 +654,9 @@
     "        System.out.println(\"Split Text: \" + Arrays.toString(splitText));\n",
     "        // Expected output: Split Text: [Héllo, Wörld!]\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "EncodingDemo.main(null);"
    ]
   },
   {
@@ -563,10 +683,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d54f6ace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n",
+      "Age: 25, Height: 1.75\n",
+      "Name: John, Score: 85\n",
+      "Pi: 3.14\n",
+      "This is the first line.\n",
+      "This is the second line.This is the first part.This is the second part.This is a \"quote\".\n",
+      "This is a backslash: \\\n",
+      "This is a tab:\t\tThis is a new line:\n",
+      "This is a bell sound:\u0007urn:\n",
+      "Full Name: John Doe\n"
+     ]
+    }
+   ],
    "source": [
     "public class PrintingExample {\n",
     "    public static void main(String[] args) {\n",
@@ -609,7 +746,9 @@
     "        String lastName = \"Doe\";\n",
     "        System.out.println(\"Full Name: \" + firstName + \" \" + lastName); // Full Name: John Doe\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "PrintingExample.main(null);"
    ]
   },
   {
@@ -632,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c911052a",
    "metadata": {},
    "outputs": [],
@@ -664,7 +803,9 @@
     "            LOGGER.log(Level.SEVERE, \"An error occurred\", e); // Expected output: SEVERE: An error occurred\n",
     "        }\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "LoggingExample.main(null);"
    ]
   },
   {
@@ -691,7 +832,7 @@
     "The output of the code snippet will be:\n",
     "```\n",
     "john.doe@example.com is a valid email address\n",
-    "jane.doe@example is an invalid email address\n",
+    "jane.doe@example is a valid email address\n",
     "invalid.email is an invalid email address\n",
     "another@example.com is a valid email address\n",
     "```\n",
@@ -701,10 +842,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "03ab6e4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john.doe@example.com is a valid email address\n",
+      "jane.doe@example is a valid email address\n",
+      "invalid.email is an invalid email address\n",
+      "another@example.com is a valid email address\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.regex.Matcher;\n",
     "import java.util.regex.Pattern;\n",
@@ -737,7 +889,9 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "RegularExpressionsDemo.main(null);"
    ]
   },
   {
@@ -772,10 +926,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8eaf1974",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object serialized to employee.ser\n",
+      "Object deserialized from employee.ser\n",
+      "Deserialized Employee:\n",
+      "Employee{name='John Doe', designation='Software Engineer', salary=0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "import java.io.*;\n",
     "\n",
@@ -846,7 +1011,9 @@
     "                \", salary=\" + salary +\n",
     "                '}';\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "SerializationDemo.main(null);"
    ]
   },
   {
@@ -874,10 +1041,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1953a449",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Hello Java  World\n",
+      "Hello Python World\n",
+      "Hello World\n",
+      "dlroW olleH\n",
+      "Length: 11\n",
+      "Capacity: 34\n",
+      "dlroW\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "public class StringBuilderDemo {\n",
     "    public static void main(String[] args) {\n",
@@ -893,11 +1076,11 @@
     "        System.out.println(sb.toString()); // Expected output: Hello World\n",
     "\n",
     "        // Insert a string at a specific position\n",
-    "        sb.insert(5, \"Java \");\n",
+    "        sb.insert(5, \" Java \");\n",
     "        System.out.println(sb.toString()); // Expected output: Hello Java World\n",
     "\n",
     "        // Replace a portion of the string\n",
-    "        sb.replace(6, 10, \"Python\");\n",
+    "        sb.replace(6, 11, \"Python\");\n",
     "        System.out.println(sb.toString()); // Expected output: Hello Python World\n",
     "\n",
     "        // Delete a portion of the string\n",
@@ -910,11 +1093,11 @@
     "\n",
     "        // Get the length of the string\n",
     "        int length = sb.length();\n",
-    "        System.out.println(\"Length: \" + length); // Expected output: Length: 12\n",
+    "        System.out.println(\"Length: \" + length); // Expected output: Length: 11\n",
     "\n",
     "        // Get the capacity of the StringBuilder\n",
     "        int capacity = sb.capacity();\n",
-    "        System.out.println(\"Capacity: \" + capacity); // Expected output: Capacity: 16\n",
+    "        System.out.println(\"Capacity: \" + capacity); // Expected output: Capacity: 34\n",
     "\n",
     "        // Set the length of the string\n",
     "        sb.setLength(5);\n",
@@ -924,15 +1107,42 @@
     "        sb.setLength(0);\n",
     "        System.out.println(sb.toString()); // Expected output: (empty string)\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "StringBuilderDemo.main(null);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ad9ccbd",
+   "metadata": {},
+   "source": [
+    "# String as Array\n",
+    "A Java string is _not an array_ and _cannot be indexed with []_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c9994df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Java",
    "language": "java",
-   "name": "ijava"
+   "name": "java"
+  },
+  "language_info": {
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "20.0.1+9-29"
   }
  },
  "nbformat": 4,
